--- a/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ObA-dk-sSI">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -57,7 +57,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecentPhotoCell" id="jE8-6j-cjl" customClass="RecentPhotoCell" customModule="Tenso_MessagesExtension" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="RecentPhotoCell" id="jE8-6j-cjl" customClass="RecentPhotoCell" customModule="Tenso_MessagesExtension" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -65,7 +65,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hj1-rK-CDg">
-                                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="213"/>
                                         </imageView>
                                     </subviews>
                                 </view>
@@ -103,7 +103,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coming soon..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sjU-YT-ics">
-                                <rect key="frame" x="102.5" y="251" width="115" height="21"/>
+                                <rect key="frame" x="102.5" y="259.5" width="115" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -131,29 +131,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="PcU-Kf-5U0">
-                                <rect key="frame" x="100" y="94" width="120" height="315"/>
+                                <rect key="frame" x="47" y="90" width="226" height="328"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oKg-Y2-QzJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="105"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="226" height="109.5"/>
                                         <color key="backgroundColor" red="0.42745100000000003" green="0.78823500000000002" blue="0.82352899999999996" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pWL-Ve-mS7">
-                                        <rect key="frame" x="0.0" y="105" width="120" height="105"/>
+                                        <rect key="frame" x="0.0" y="109.5" width="226" height="109"/>
                                         <color key="backgroundColor" red="0.18823529410000001" green="0.70980392160000005" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mdD-AW-CPA">
-                                        <rect key="frame" x="0.0" y="210" width="120" height="105"/>
+                                        <rect key="frame" x="0.0" y="218.5" width="226" height="109.5"/>
                                         <color key="backgroundColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="PcU-Kf-5U0" secondAttribute="height" multiplier="300:435" id="dKf-Em-Z5F"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.10000000000000001" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="leading" secondItem="09C-tB-3aU" secondAttribute="leading" constant="100" id="JYw-d7-EGC"/>
-                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="top" secondItem="09C-tB-3aU" secondAttribute="top" constant="30" id="OFA-bC-MyT"/>
-                            <constraint firstItem="09C-tB-3aU" firstAttribute="trailing" secondItem="PcU-Kf-5U0" secondAttribute="trailing" constant="100" id="YX3-Ph-vEj"/>
-                            <constraint firstItem="09C-tB-3aU" firstAttribute="bottom" secondItem="PcU-Kf-5U0" secondAttribute="bottom" constant="50" id="vlv-Gg-tZh"/>
+                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="centerX" secondItem="SI4-w9-TI0" secondAttribute="centerX" id="9Hd-G0-ujO"/>
+                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="centerY" secondItem="SI4-w9-TI0" secondAttribute="centerY" id="Dtn-yK-Tei"/>
+                            <constraint firstItem="PcU-Kf-5U0" firstAttribute="top" secondItem="09C-tB-3aU" secondAttribute="top" constant="26" id="hdh-Ut-bYF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="09C-tB-3aU"/>
                     </view>
@@ -191,7 +193,7 @@
             <objects>
                 <navigationController modalTransitionStyle="crossDissolve" id="SD4-qf-INR" customClass="MessagesNavigationController" customModule="Tenso_MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="A0G-AE-FZj">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fTQ-ev-Kfy">
