--- a/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -131,12 +131,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="v2K-mh-vLK">
-                                <rect key="frame" x="30" y="115" width="315" height="457"/>
+                                <rect key="frame" x="30" y="60" width="315" height="457"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" image="FacesSelected" translatesAutoresizingMaskIntoConstraints="NO" id="p23-aw-lMh">
-                                        <rect key="frame" x="0.0" y="0.0" width="315" height="434.5"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" image="FacesSelected" translatesAutoresizingMaskIntoConstraints="NO" id="p23-aw-lMh">
+                                        <rect key="frame" x="0.0" y="0.0" width="315" height="414"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detecting Features" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apk-Mg-e3x">
+                                        <rect key="frame" x="0.0" y="414" width="315" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="Shim" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0P-I2-JmI">
                                         <rect key="frame" x="0.0" y="434.5" width="315" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -154,15 +160,16 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="v2K-mh-vLK" firstAttribute="leading" secondItem="0fS-M4-opW" secondAttribute="leading" constant="30" id="3P3-hN-l9Z"/>
-                            <constraint firstItem="v2K-mh-vLK" firstAttribute="centerY" secondItem="0fS-M4-opW" secondAttribute="centerY" id="HGZ-Oj-QUL"/>
+                            <constraint firstItem="v2K-mh-vLK" firstAttribute="top" secondItem="0fS-M4-opW" secondAttribute="top" constant="40" id="HGZ-Oj-QUL"/>
                             <constraint firstItem="v2K-mh-vLK" firstAttribute="centerX" secondItem="0fS-M4-opW" secondAttribute="centerX" id="PEV-wl-ACK"/>
                             <constraint firstItem="0fS-M4-opW" firstAttribute="trailing" secondItem="v2K-mh-vLK" secondAttribute="trailing" constant="30" id="wfl-17-ZCw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0fS-M4-opW"/>
                     </view>
                     <connections>
-                        <outlet property="CurrentImage" destination="p23-aw-lMh" id="Wjh-7f-ifY"/>
+                        <outlet property="LoadingImageView" destination="p23-aw-lMh" id="D9S-8J-ybN"/>
                         <outlet property="Progress" destination="FdF-1D-iuD" id="fmJ-MU-jAF"/>
+                        <segue destination="Gg3-w9-wVv" kind="show" identifier="ShowCompletedTenso" id="EJv-Kk-Axb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8EL-GA-ZVx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -183,7 +190,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t3Q-Va-0W1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3583.8080959520244" y="-104"/>
+            <point key="canvasLocation" x="3583" y="-457"/>
         </scene>
         <!--Tenso View Controller-->
         <scene sceneID="eHL-Di-GlD">
@@ -194,7 +201,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SoI-re-aJE">
-                                <rect key="frame" x="30" y="115" width="315" height="457"/>
+                                <rect key="frame" x="30" y="80" width="315" height="457"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2K3-me-Qme">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="152.5"/>
@@ -217,7 +224,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="jXo-uR-yR2" firstAttribute="trailing" secondItem="SoI-re-aJE" secondAttribute="trailing" constant="30" id="G0R-NI-xey"/>
-                            <constraint firstItem="jXo-uR-yR2" firstAttribute="centerY" secondItem="SoI-re-aJE" secondAttribute="centerY" id="WcV-O8-GpX"/>
+                            <constraint firstItem="jXo-uR-yR2" firstAttribute="top" secondItem="SoI-re-aJE" secondAttribute="top" constant="-60" id="WcV-O8-GpX"/>
                             <constraint firstItem="SoI-re-aJE" firstAttribute="leading" secondItem="jXo-uR-yR2" secondAttribute="leading" constant="30" id="h7Z-Q8-FxL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="jXo-uR-yR2"/>
