--- a/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
+++ b/Tenso MessagesExtension/Base.lproj/MainInterface.storyboard
@@ -168,7 +168,8 @@
                     </view>
                     <connections>
                         <outlet property="LoadingImageView" destination="p23-aw-lMh" id="D9S-8J-ybN"/>
-                        <outlet property="Progress" destination="FdF-1D-iuD" id="fmJ-MU-jAF"/>
+                        <outlet property="loadingImageView" destination="p23-aw-lMh" id="Tvu-Ua-wKc"/>
+                        <outlet property="progressBar" destination="FdF-1D-iuD" id="c4c-uG-3zh"/>
                         <segue destination="Gg3-w9-wVv" kind="show" identifier="ShowCompletedTenso" id="EJv-Kk-Axb"/>
                     </connections>
                 </viewController>
@@ -200,22 +201,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SoI-re-aJE">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SoI-re-aJE">
                                 <rect key="frame" x="30" y="80" width="315" height="457"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2K3-me-Qme">
                                         <rect key="frame" x="0.0" y="0.0" width="315" height="152.5"/>
-                                        <color key="backgroundColor" red="0.42745100000000003" green="0.78823500000000002" blue="0.82352899999999996" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4qg-Cq-Rc3">
                                         <rect key="frame" x="0.0" y="152.5" width="315" height="152"/>
-                                        <color key="backgroundColor" red="0.18823529410000001" green="0.70980392160000005" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j6x-Oq-MxI">
                                         <rect key="frame" x="0.0" y="304.5" width="315" height="152.5"/>
-                                        <color key="backgroundColor" red="0.98823529409999999" green="0.36078431370000003" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                 </subviews>
+                                <color key="backgroundColor" red="1" green="0.15686274510000001" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="SoI-re-aJE" secondAttribute="height" multiplier="300:435" id="rFB-4R-jp3"/>
                                 </constraints>
